Fixed some mobile CSS spacing issues.

--- a/css/agency.css
+++ b/css/agency.css
@@ -31,6 +31,10 @@ h2.section-heading.text-uppercase.dark {
   color: white;
 }
 
+.modal-body.text-uppercase {
+  word-wrap: break-word;
+}
+
 .portfolio-caption.dark {
   color: black;
   background-color: black;
