--- a/scss/adam.scss
+++ b/scss/adam.scss
@@ -24,6 +24,11 @@ body.dark {
 h2.section-heading.text-uppercase.dark {
   color: white;
 }
+
+.modal-body.text-uppercase {
+  word-wrap: break-word;
+}
+
 .portfolio-caption.dark {
   color: black; 
   background-color: black;
